# surrealdb

./: .bazelrc  .bazelrc.user.example  .gitignore  BUILD.bazel  CLAUDE.md  Cargo.toml  MODULE.bazel  WORKSPACE.bazel  deny.toml
.github/actions/setup-environment/: action.yml
.github/workflows/: bazel.yml  ci.yml  codeql.yml  coverage.yml  fuzzing.yml  release.yml  supply-chain.yml
language-tests/: BUILD.bazel  Cargo.toml
language-tests/src/: cli.rs  main.rs
language-tests/src/cmd/run/: backend_service.rs  mod.rs  provisioner.rs  worker.rs
language-tests/src/tests/report/: display.rs
language-tests/tests/language/functions/encoding/: json_decode.surql
language-tests/tests/language/statements/select/: version_clauses.surql  version_errors_before_data.surql  version_errors_non_versioned.surql  version_index_consistency.surql  version_mutations.surql  version_schema_consistency.surql
language-tests/tests/reproductions/: select_value_alias_order_by.surql  select_value_volatile_alias_order_by.surql
profiling/: BUILD.bazel
supply-chain/: audits.toml  config.toml
surrealdb/: BUILD.bazel
surrealdb/core/: BUILD.bazel  Cargo.toml
surrealdb/core/src/: lib.rs
surrealdb/core/src/ai/providers/: openai.rs
surrealdb/core/src/api/: err.rs
surrealdb/core/src/catalog/: providers.rs
surrealdb/core/src/cnf/: mod.rs
surrealdb/core/src/ctx/: context.rs
surrealdb/core/src/dbs/: capabilities.rs  executor.rs  iterator.rs
surrealdb/core/src/doc/: edges.rs  table.rs
surrealdb/core/src/err/: mod.rs  to_types.rs
surrealdb/core/src/exec/: context.rs  expression_registry.rs  planner.rs
surrealdb/core/src/exec/function/: index.rs
surrealdb/core/src/exec/function/builtin/: search.rs
surrealdb/core/src/exec/operators/info/: database.rs  namespace.rs  root.rs  table.rs
surrealdb/core/src/exec/operators/scan/: count.rs  dynamic.rs  fulltext.rs  index.rs  index_count.rs  knn.rs  record_id.rs  resolved.rs  table.rs
surrealdb/core/src/exec/physical_expr/: literal.rs  matches.rs
surrealdb/core/src/exec/physical_expr/function/: model.rs  module.rs  user_defined.rs
surrealdb/core/src/exec/planner/: select.rs
surrealdb/core/src/expr/: function.rs  module.rs  param.rs
surrealdb/core/src/expr/statements/: access.rs  info.rs  select.rs
surrealdb/core/src/expr/statements/alter/: access.rs  analyzer.rs  api.rs  bucket.rs  config.rs  event.rs  field.rs  function.rs  param.rs  sequence.rs
surrealdb/core/src/expr/statements/define/: access.rs  analyzer.rs  bucket.rs  event.rs  field.rs  model.rs  module.rs  sequence.rs  table.rs
surrealdb/core/src/fnc/: encoding.rs  search.rs
surrealdb/core/src/gql/: schema.rs
surrealdb/core/src/idx/: index.rs
surrealdb/core/src/idx/ft/: fulltext.rs
surrealdb/core/src/idx/planner/: iterators.rs  tree.rs
surrealdb/core/src/kvs/: api.rs  ds.rs  export.rs  index.rs  sequences.rs  tr.rs  tx.rs
surrealdb/core/src/kvs/mem/: mod.rs
surrealdb/core/src/kvs/rocksdb/: comparator.rs  garbage_collector.rs  mod.rs
surrealdb/core/src/kvs/surrealkv/: mod.rs
surrealdb/core/src/kvs/tests/: tx_cache_test.rs
surrealdb/core/src/surrealism/: cache.rs  host.rs
surrealdb/core/src/syn/lexer/strings/: mod.rs
surrealdb/core/src/syn/parser/: mod.rs
surrealdb/core/src/syn/parser/stmt/: define.rs
surrealdb/core/tests/: access.rs  create.rs  helpers.rs  insert.rs  upsert.rs
surrealdb/server/: BUILD.bazel  Cargo.toml
surrealdb/server/src/: lib.rs
surrealdb/server/src/cli/: mod.rs
surrealdb/server/src/cli/module/: build.rs  host.rs  info.rs  init_cmd.rs  run.rs  sig.rs
surrealdb/server/src/cli/validator/parser/: tracing.rs
surrealdb/server/src/dbs/: mod.rs
surrealdb/server/src/telemetry/: mod.rs
surrealdb/server/src/telemetry/logs/: mod.rs
surrealdb/server/src/telemetry/traces/: mod.rs
surrealdb/src/engine/local/: mod.rs
surrealdb/src/engine/remote/http/: mod.rs
surrealdb/tests/api_integration/: mod.rs
surrealdb/types/: BUILD.bazel
surrealdb/types/derive/: BUILD.bazel
surrealdb/types/derive/src/: lib.rs
surrealdb/types/derive/src/impl/: enum.rs  struct.rs
surrealdb/types/derive/src/structs/: mod.rs
surrealdb/types/src/: error.rs
surrealdb/types/src/traits/: surreal_value.rs
surrealdb/types/tests/: error_types.rs  serde_integration.rs
surrealdb/types/tests/surreal_value/derive/: mod.rs
surrealism/: BUILD.bazel  Cargo.toml
surrealism/demo/: Cargo.toml
surrealism/demo/src/: lib.rs
surrealism/macros/: BUILD.bazel
surrealism/macros/src/: attr.rs  extract.rs  generate.rs  handler.rs  lib.rs
surrealism/runtime/: BUILD.bazel  Cargo.toml
surrealism/runtime/src/: capabilities.rs  config.rs  controller.rs  epoch.rs  exports.rs  host.rs  kv.rs  lib.rs  package.rs  runtime.rs  store.rs  wasi_context.rs
surrealism/src/: dispatch.rs  imports.rs  registry.rs
surrealism/types/: BUILD.bazel  Cargo.toml
surrealism/types/src/: err.rs
surrealism/wit/: surrealism.wit
surrealml/core/: BUILD.bazel
tests/: BUILD.bazel  surrealism_integration.rs
tests/common/: server.rs
tools/rust/: defs.bzl  integration_test.bzl  language_test.bzl  transitions.bzl
tools/settings/: BUILD.bazel
tools/tiup/: BUILD.bazel  tiup_repo.bzl
