load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@crates_io//:defs.bzl", "all_crate_deps")
load("@rules_multirun//:defs.bzl", "multirun")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

exports_files([
    ".clippy.toml",
    ".rustfmt.toml",
    "Cargo.toml",
])

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    data = [
        "Cargo.lock",
        "Cargo.toml",
    ],
    deps = all_crate_deps(build = True),
)

_S = "//tools/settings"

rust_binary(
    name = "surreal",
    srcs = glob(["src/**/*.rs"]),
    crate_features = select({
        _S + ":engine_mem": ["storage-mem"],
        _S + ":engine_rocksdb": [
            "storage-mem",
            "storage-rocksdb",
        ],
        _S + ":engine_surrealkv": [
            "storage-mem",
            "storage-surrealkv",
        ],
        _S + ":engine_tikv": [
            "storage-mem",
            "storage-tikv",
        ],
    }) + select({
        _S + ":http_enabled": ["http"],
        "//conditions:default": [],
    }) + select({
        _S + ":scripting_enabled": ["scripting"],
        "//conditions:default": [],
    }) + select({
        _S + ":graphql_enabled": ["graphql"],
        "//conditions:default": [],
    }) + select({
        _S + ":cli_enabled": ["cli"],
        "//conditions:default": [],
    }) + select({
        _S + ":jwks_enabled": ["jwks"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        ":build_script",
        "//surrealdb",
        "//surrealdb/core",
        "//surrealdb/server",
    ],
)

rust_test(
    name = "surreal.test",
    testonly = True,
    compile_data = ["Cargo.toml"],
    crate = ":surreal",
)

buildifier(
    name = "buildfmt",
    lint_mode = "fix",
)

buildifier(
    name = "buildfmt.check",
    lint_mode = "warn",
    mode = "diff",
)

alias(
    name = "rustfmt",
    actual = "@rules_rust//tools/rustfmt:target_aware_rustfmt",
    visibility = ["//visibility:public"],
)

multirun(
    name = "fmt",
    commands = [
        ":buildfmt",
        ":rustfmt",
    ],
)
