module(
    name = "surrealdb",
)

bazel_dep(
    name = "platforms",
    version = "1.0.0",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.8.2",
)
bazel_dep(
    name = "rules_shell",
    version = "0.6.1",
)
bazel_dep(
    name = "rules_multirun",
    version = "0.13.0",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.1.2",
    dev_dependency = True,
)

###############################################################################
# Rust
###############################################################################
bazel_dep(name = "rules_rust", version = "0.69.0")

RUST_EDITION = "2024"

RUST_VERSION = "1.91.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_VERSION],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates_io",
    cargo_lockfile = "//:Cargo.lock",
    isolated = False,
    manifests = ["//:Cargo.toml"],
)

# Cargo's cross-platform feature unification activates both rust_crypto
# (WASM) and aws_lc_rs (native) on jsonwebtoken. crate_universe puts
# rust_crypto in unconditional features but its deps only in the WASM
# select branch. Patch the module gate to restrict to WASM targets.
crate.annotation(
    crate = "jsonwebtoken",
    patch_args = ["-p1"],
    patches = ["//third_party/patches:jsonwebtoken_native_crypto.patch"],
)

# rocksdb build script compiles C++ via cc-rs using relative include paths
# (e.g. -I "snappy/"). Running from the crate root (rundir=".") makes these
# resolve, but the build.rs tries `git submodule update` when it can't find
# rocksdb/AUTHORS (which lives in runfiles, not the exec root). The patch
# skips the git check when ROCKSDB_BAZEL_BUILD is set.
crate.annotation(
    crate = "surrealdb-librocksdb-sys",
    build_script_data_glob = ["**"],
    build_script_env = {"ROCKSDB_BAZEL_BUILD": "1"},
    data_glob = ["**"],
    patch_args = ["-p0"],
    patches = ["//third_party/patches:rocksdb_sys_skip_git_in_bazel.patch"],
)
use_repo(crate, "crates_io")

###############################################################################
# TiKV tooling
###############################################################################
tiup_repo = use_repo_rule("//tools/tiup:tiup_repo.bzl", "tiup_repo")
tiup_repo(name = "tiup")
