load("@crates_io//:defs.bzl", "all_crate_deps")
load("//tools/rust:defs.bzl", "rust_library")

rust_library(
    name = "surrealdb",
    crate_features = [
        "kv-mem",
        "protocol-http",
        "protocol-ws",
        "rustls",
    ],
    crate_name = "surrealdb",
    proc_macro_deps = all_crate_deps(proc_macro = True) + [
        "//surrealdb/types/derive",
    ],
    rustc_flags = [
        "--cfg",
        "storage",
    ],
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//surrealdb/core",
        "//surrealdb/types",
    ],
)
