load("@crates_io//:defs.bzl", "all_crate_deps")
load("//tools/rust:defs.bzl", "rust_library")

rust_library(
    name = "surrealism",
    crate_name = "surrealism",
    proc_macro_deps = all_crate_deps(proc_macro = True) + [
        "//surrealism/macros",
    ],
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//surrealdb/types",
        "//surrealism/types",
    ],
)
