load("@crates_io//:defs.bzl", "aliases", "all_crate_deps")
load("//tools/rust:defs.bzl", "rust_library")

# surrealdb-core deps are listed explicitly because all_crate_deps() pulls
# in ALL optional deps (rocksdb, tikv, etc.) regardless of active features.
# Deps are grouped by the feature that activates them and wired via select().

_S = "//tools/settings"

_BASE_DEPS = [
    "@crates_io//:dmp",
    "@crates_io//:lexicmp",
    "@crates_io//:reblessive",
    "@crates_io//:revision",
    "@crates_io//:storekey",
    "@crates_io//:vart",
    "@crates_io//:addr",
    "@crates_io//:ahash",
    "@crates_io//:ammonia",
    "@crates_io//:anyhow",
    "@crates_io//:argon2",
    "@crates_io//:async-channel",
    "@crates_io//:async-stream",
    "@crates_io//:base64",
    "@crates_io//:bcrypt",
    "@crates_io//:blake3",
    "@crates_io//:bytes",
    "@crates_io//:chrono",
    "@crates_io//:ciborium",
    "@crates_io//:dashmap",
    "@crates_io//:deunicode",
    "@crates_io//:fastnum",
    "@crates_io//:fst",
    "@crates_io//:futures",
    "@crates_io//:fuzzy-matcher",
    "@crates_io//:geo",
    "@crates_io//:geo-types",
    "@crates_io//:headers",
    "@crates_io//:hex",
    "@crates_io//:http",
    "@crates_io//:humantime",
    "@crates_io//:ipnet",
    "@crates_io//:md-5",
    "@crates_io//:mime",
    "@crates_io//:ndarray",
    "@crates_io//:ndarray-stats",
    "@crates_io//:num-traits",
    "@crates_io//:num_cpus",
    "@crates_io//:object_store",
    "@crates_io//:parking_lot",
    "@crates_io//:path-clean",
    "@crates_io//:pbkdf2",
    "@crates_io//:phf",
    "@crates_io//:pin-project-lite",
    "@crates_io//:quick_cache",
    "@crates_io//:radix_trie",
    "@crates_io//:rand",
    "@crates_io//:rayon",
    "@crates_io//:regex",
    "@crates_io//:roaring",
    "@crates_io//:rust-stemmers",
    "@crates_io//:rust_decimal",
    "@crates_io//:scrypt",
    "@crates_io//:semver",
    "@crates_io//:serde",
    "@crates_io//:serde_json",
    "@crates_io//:sha1",
    "@crates_io//:sha2",
    "@crates_io//:strsim",
    "@crates_io//:subtle",
    "@crates_io//:sysinfo",
    "@crates_io//:thiserror",
    "@crates_io//:tracing",
    "@crates_io//:ulid",
    "@crates_io//:unicase",
    "@crates_io//:url",
    "@crates_io//:web-time",
    # reqwest is used by both http and jwks features; include unconditionally
    # to avoid duplication in select() branches
    "@crates_io//:reqwest",
    # Non-WASM platform deps (always needed on native)
    "@crates_io//:jsonwebtoken",
    "@crates_io//:surrealdb-protocol",
    "@crates_io//:tokio",
    "@crates_io//:tokio-util",
    "@crates_io//:uuid",
    "//surrealdb/types",
]

_KV_COMMON_DEPS = [
    "@crates_io//:affinitypool",
    "@crates_io//:ext-sort",
    "@crates_io//:tempfile",
]

_KV_MEM_DEPS = _KV_COMMON_DEPS + ["@crates_io//:surrealmx"]

_KV_ROCKSDB_DEPS = _KV_COMMON_DEPS + [
    "@crates_io//:surrealmx",
    "@crates_io//:surrealdb-rocksdb",
]

_KV_SURREALKV_DEPS = _KV_COMMON_DEPS + [
    "@crates_io//:surrealmx",
    "@crates_io//:surrealkv",
]

_KV_TIKV_DEPS = _KV_COMMON_DEPS + [
    "@crates_io//:surrealmx",
    "@crates_io//:tikv",
]

# Must be kept in sync with Cargo.toml workspace version.
# Used by env!("CARGO_PKG_VERSION") in src/env/mod.rs.
_VERSION = "3.1.0-alpha"

rust_library(
    name = "core",
    aliases = aliases(),
    crate_features = select({
        _S + ":engine_mem": ["kv-mem"],
        _S + ":engine_rocksdb": [
            "kv-mem",
            "kv-rocksdb",
        ],
        _S + ":engine_surrealkv": [
            "kv-mem",
            "kv-surrealkv",
        ],
        _S + ":engine_tikv": [
            "kv-mem",
            "kv-tikv",
        ],
    }) + select({
        _S + ":graphql_enabled": ["graphql"],
        "//conditions:default": [],
    }) + select({
        _S + ":scripting_enabled": ["scripting"],
        "//conditions:default": [],
    }) + select({
        _S + ":http_enabled": ["http"],
        "//conditions:default": [],
    }) + select({
        _S + ":jwks_enabled": ["jwks"],
        "//conditions:default": [],
    }),
    crate_name = "surrealdb_core",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    rustc_env = {"CARGO_PKG_VERSION": _VERSION},
    rustc_flags = [
        "--cfg",
        "storage",
    ],
    compile_data = ["Cargo.toml"],
    test_compile_data = [
        "Cargo.toml",
        "test.surql",
    ],
    test_deps = [
        "@crates_io//:flate2",
        "@crates_io//:rstest",
        "@crates_io//:test-log",
    ],
    test_proc_macro_deps = [
        "@crates_io//:paste",
    ],
    visibility = ["//visibility:public"],
    deps = _BASE_DEPS + select({
        _S + ":engine_mem": _KV_MEM_DEPS,
        _S + ":engine_rocksdb": _KV_ROCKSDB_DEPS,
        _S + ":engine_surrealkv": _KV_SURREALKV_DEPS,
        _S + ":engine_tikv": _KV_TIKV_DEPS,
    }) + select({
        _S + ":graphql_enabled": ["@crates_io//:async-graphql"],
        "//conditions:default": [],
    }) + select({
        _S + ":scripting_enabled": ["@crates_io//:js"],
        "//conditions:default": [],
    }),
)
