load("@crates_io//:defs.bzl", "aliases", "all_crate_deps")
load("//tools/rust:defs.bzl", "rust_library")

_S = "//tools/settings"

# Must be kept in sync with Cargo.toml workspace version.
# Used by env!("CARGO_PKG_VERSION") in src/cnf/mod.rs.
_VERSION = "3.1.0-alpha"

# Server has heavy optional deps (wasm-opt, pprof) that all_crate_deps()
# includes unconditionally. List deps explicitly, adding optional ones
# via select().

_BASE_DEPS = [
    "@crates_io//:anyhow",
    "@crates_io//:axum",
    "@crates_io//:axum-extra",
    "@crates_io//:axum-server",
    "@crates_io//:bytes",
    "@crates_io//:clap",
    "@crates_io//:console-subscriber",
    "@crates_io//:dashmap",
    "@crates_io//:futures",
    "@crates_io//:futures-util",
    "@crates_io//:glob",
    "@crates_io//:http",
    "@crates_io//:http-body",
    "@crates_io//:hyper",
    "@crates_io//:num_cpus",
    "@crates_io//:opentelemetry",
    "@crates_io//:opentelemetry-otlp",
    "@crates_io//:opentelemetry_sdk",
    "@crates_io//:pin-project-lite",
    "@crates_io//:rand",
    "@crates_io//:reqwest",
    "@crates_io//:rustls",
    "@crates_io//:semver",
    "@crates_io//:serde",
    "@crates_io//:serde_json",
    "@crates_io//:tempfile",
    "@crates_io//:thiserror",
    "@crates_io//:tokio",
    "@crates_io//:tokio-stream",
    "@crates_io//:tokio-util",
    "@crates_io//:tower",
    "@crates_io//:tower-http",
    "@crates_io//:tower-service",
    "@crates_io//:tracing",
    "@crates_io//:tracing-appender",
    "@crates_io//:tracing-opentelemetry",
    "@crates_io//:tracing-subscriber",
    "@crates_io//:uuid",
    "@crates_io//:web-time",
    "//surrealdb",
    "//surrealdb/core",
    "//surrealdb/types",
] + select({
    "@platforms//os:linux": ["@crates_io//:nix"],
    "@platforms//os:macos": ["@crates_io//:nix"],
    "//conditions:default": [],
})

rust_library(
    name = "server",
    aliases = aliases(),
    compile_data = ["README.md"],
    crate_features = select({
        _S + ":engine_mem": ["storage-mem"],
        _S + ":engine_rocksdb": [
            "storage-mem",
            "storage-rocksdb",
        ],
        _S + ":engine_surrealkv": [
            "storage-mem",
            "storage-surrealkv",
        ],
        _S + ":engine_tikv": [
            "storage-mem",
            "storage-tikv",
        ],
    }) + select({
        _S + ":http_enabled": ["http"],
        "//conditions:default": [],
    }) + select({
        _S + ":scripting_enabled": ["scripting"],
        "//conditions:default": [],
    }) + select({
        _S + ":graphql_enabled": ["graphql"],
        "//conditions:default": [],
    }) + select({
        _S + ":cli_enabled": ["cli"],
        "//conditions:default": [],
    }) + select({
        _S + ":jwks_enabled": ["jwks"],
        "//conditions:default": [],
    }),
    crate_name = "surrealdb_server",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    rustc_env = {"CARGO_PKG_VERSION": _VERSION},
    rustc_flags = [
        "--cfg",
        "storage",
    ],
    test_compile_data = ["Cargo.toml"],
    test_deps = [
        "@crates_io//:test-log",
        "@crates_io//:wiremock",
    ],
    visibility = ["//visibility:public"],
    deps = _BASE_DEPS + select({
        _S + ":cli_enabled": ["@crates_io//:rustyline"],
        "//conditions:default": [],
    }) + select({
        _S + ":graphql_enabled": [
            "@crates_io//:async-graphql",
            "@crates_io//:async-graphql-axum",
        ],
        "//conditions:default": [],
    }),
)
