load("@crates_io//:defs.bzl", "all_crate_deps")
load("//tools/rust:defs.bzl", "rust_library")

rust_library(
    name = "types",
    compile_data = ["README.md"],
    crate_name = "surrealdb_types",
    proc_macro_deps = all_crate_deps(proc_macro = True) + [
        "//surrealdb/types/derive",
    ],
    test_compile_data = [
        "Cargo.toml",
        "README.md",
    ],
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True),
)
