load("@crates_io//:defs.bzl", "all_crate_deps")
load("//tools/rust:defs.bzl", "rust_library")

# Tagged "manual" because ort-sys (ONNX Runtime) requires downloading
# prebuilt binaries at build-script time, which fails inside Bazel's
# sandbox. Build explicitly with: bazel build //surrealml/core:core
rust_library(
    name = "core",
    crate_name = "surrealml_core",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True),
)
